--- a/react-mors/package.json
+++ b/react-mors/package.json
@@ -2,6 +2,7 @@
   "name": "react-mors",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/about/promo/redaktor-test/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
